# BugSquash

./: CMakeLists.txt  README.md
Game/: CMakeLists.txt  Doxyfile.doxy  GameApp.cpp  GameApp.h  README.md  main.cpp  pch.h
Game/GameLib/: Bug.cpp  Bug.h  CMakeLists.txt  FeatureBug.cpp  FeatureBug.h  Game.cpp  Game.h  GameView.cpp  GameView.h  GarbageBug.cpp  GarbageBug.h  Item.cpp  Item.h  MainFrame.cpp  MainFrame.h  NullBug.cpp  NullBug.h  Program.cpp  Program.h  RedundancyBug.cpp  RedundancyBug.h  ids.h  pch.h
Game/data/: level0.xml  level1.xml  level2.xml  level3.xml
Game/tests/: CMakeLists.txt
